--- a/TODO
+++ b/TODO
@@ -1,10 +1,13 @@
 TODO's and shit, so's I can get started again:
 ---------------------------------------------
 
-- figure out for like.. the millionth time why this chrome plugin is busted and fix it... again. but commit it this time!
-    - (might be fixed on chromebook)
-
-- determine if I wanna add logic for different amounts of booze/ingredients in drinks (essentially add ingredients and prolly have 3 designations, super hard (bacardi 151 etc), hard (vodka etc), almost hard(triple sec etc), semi hard (beer, wine), not hard (juice etc), negative hard (coffee etc)
+- determine if I wanna add logic for different amounts of booze/ingredients in drinks (essentially add ingredients and prolly have a bunch of designations: 
+    (4) super hard (bacardi 151 etc), 
+    (3) hard (vodka etc), 
+    (2) almost hard(triple sec etc), 
+    (1) semi hard (beer, wine), 
+    (0) not hard (juice etc), 
+    (-1) negative hard (coffee etc)
 
 - work on better names for all that hard shit ^
 
