hook up BAC to make browser more/less drunk as it drinks! \o/
* scoping issue with the this.BAC that I need to fix
* manually setting intoxication level works but throws errors on demo, gotta fix that too

--- a/TODO
+++ b/TODO
@@ -9,6 +9,7 @@ TODO's and shit, so's I can get started again:
     (-1) negative booze (coffee etc)
 
 - drink consumption logic
+    sober: 0 (obvi)
     buzzed: 1
     im-fine: 4
     drunk: 7
